--- a/web/resources/css/common.css
+++ b/web/resources/css/common.css
@@ -746,6 +746,9 @@ input[type=checkbox]:checked {
 .auction-time {
         bottom: 80px;
     }
+    .header-menu-layout .navbar-nav{
+        margin-left: 25px;
+    }
 }
 /* --------------------- Medium Device -------------------------------------  */
 @media (min-width : 992px) and (max-width : 1199px) {
@@ -804,7 +807,10 @@ input[type=checkbox]:checked {
         width: 295px!important;
     }
     .header-menu-layout .navbar-nav{
-        margin-left: 45px;
+        margin-left: 20px;
+    }
+    .float-right-adjust{
+        float: right!important;
     }
     .search-login-top-bottom-margin{
         margin: 50px 0;
@@ -875,7 +881,10 @@ input[type=checkbox]:checked {
         width: 360px!important;
     }
     .header-menu-layout .navbar-nav{
-        margin-left: 45px;
+        margin-left: 30px;
+    }
+    .float-right-adjust{
+        float: right!important;
     }
     .search-login-top-bottom-margin{
         margin: 55px 0;
@@ -934,7 +943,7 @@ input[type=checkbox]:checked {
     position: relative;
 }
 .product-auction-img img{
-    height: 100%!important;
+    height: 250px!important;
     width: 100%!important;
 }
 
@@ -1131,6 +1140,8 @@ input[type=checkbox]:checked {
 }
 .grid-property-img{
     padding: 8px;
+    width: 100%;
+    height: 212px;
 }
 /* --------------------- Search Result List Property Section -------------------------------------  */
 .list-property-section{
@@ -1230,7 +1241,7 @@ input[type=checkbox]:checked {
 .product-info-details-left-panel-middle-heading{
     font-family: "tw-cen-mt";
     color: #216db1;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: normal;
 }
 .hr{
@@ -1269,7 +1280,7 @@ input[type=checkbox]:checked {
 }
 .product-info-details-left-panel-current-price{
     font-family: "tw-cen-mt";
-    font-size: 20px;
+    font-size: 15px;
     color: #2571b5;
     font-weight: normal;
 }
@@ -1286,7 +1297,7 @@ input[type=checkbox]:checked {
     background-color: #4568b2!important;
     color: #ffffff;
     border-radius: 4px!important;
-    border: 1px solid #ccc!important;
+    border: 1px solid #4568b2!important;
     padding: 6px 12px!important;
     font-weight: bold;
 }
@@ -1306,7 +1317,7 @@ input[type=checkbox]:checked {
     font-weight: normal;
 }
 .product-info-details-left-panel-previous-bids{
-    margin-top: 8px;
+    
 }
 .product-info-details-left-panel-previous-bids a{
     font-family: "tw-cen-mt";
@@ -1315,12 +1326,33 @@ input[type=checkbox]:checked {
     font-weight: normal;
     padding: 10px;
 }
-.product-info-details-left-panel-location{
+.product-info-details-left-panel-location,.product-info-details-left-panel-save-property{
     font-family: "tw-cen-mt";
     color: #484848;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: normal;
     padding: 10px; 
+}
+.save-property-heart-icon{
+    color: #db3054;
+}
+.product-info-details-contact-number{
+    font-family: "tw-cen-mt";
+    color: #F06226;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 10px;
+}
+.product-info-details-request-button {
+    background-color: #4568b2!important;
+    color: #ffffff;
+    border-radius: 8px!important;
+    border: 1px solid #4568b2!important;
+    padding: 6px 12px!important;
+    font-weight: bold;
+}
+.product-info-details-request-button:focus {
+    border: 1px solid #4568b2!important;
 }
 .product-info-details-right-panel-product-title{
     font-family: "tw-cen-mt";
