--- a/web/templates/member/header.html
+++ b/web/templates/member/header.html
@@ -7,11 +7,10 @@
                         <img id="logo" src="resources/images/logo.png" class="img-responsive header-logo" alt="Logo">
                     </a>
                 </div>
-                <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+                <div class="col-xs-12 col-sm-9 col-md-8 col-lg-offset-1 col-lg-6 float-right-adjust">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <nav class="navbar navbar-default header-menu-layout">
-                                <div class="container-fluid">
                                     <div class="navbar-header">
                                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse" aria-expanded="false">
                                             <span class="sr-only">Toggle navigation</span>
@@ -44,7 +43,6 @@
                                                 </li>
                                         </ul>
                                     </div>
-                                </div>
                             </nav>
                         </div>
                     </div>
