--- a/web/templates/public/header.html
+++ b/web/templates/public/header.html
@@ -4,11 +4,10 @@
             <div class="col-xs-12 col-sm-3 col-md-4 col-lg-5">
                 <a (click)="goToLanding($event)"><img id="logo" src="resources/images/logo.png" class="img-responsive" alt="Logo"> </a>
             </div>
-            <div class="col-xs-12 col-sm-9 col-md-8 col-lg-7">
+            <div class="col-xs-12 col-sm-9 col-md-7 col-lg-offset-1 col-lg-6 float-right-adjust">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <nav class="navbar navbar-default header-menu-layout">
-                            <div class="container-fluid">
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar-collapse" aria-expanded="false">
                                         <span class="sr-only">Toggle navigation</span>
@@ -23,10 +22,9 @@
                                         <li><a (click)="goToSearch($event)">Search </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToAboutus($event)">About </a> <span class="header-menu-tag">|</span></li>
                                         <li><a (click)="goToContactus($event)">Contact</a><span class="header-menu-tag">|</span></li>
-                                        <li><a (click)="goToLogin($event)">Login</a><span class="header-menu-tag">|</span></li>
+                                        <li><a (click)="goToLogin($event)">Login</a></li>
                                     </ul>
                                 </div>
-                            </div>
                         </nav>
                     </div>
                 </div>
